--- a/css/styles.css
+++ b/css/styles.css
@@ -276,3 +276,30 @@ hr {
     .hidden-phone {display: none;}
     
 }
+
+.background-gray {
+    background: #434242;
+}
+
+#contact a .icon {
+    float: left;
+    margin-right: 20px;
+}
+
+#contact a {
+    line-height: 32px;
+}
+
+.icon.icon-twitter {
+    background-position: 0px 0px;
+}
+
+.icon {
+    display: inline-block;
+    height: 32px;
+    width: 32px;
+}
+
+#contact .row * {
+    color: #FFFFFF;
+}
