--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,10 @@ h4 {
     font-size: 16px;
 }
 
-
+h1 {
+    font-size: 54px;
+    color: #22A39F;
+}
 
 p {
     display: block;
@@ -73,7 +76,7 @@ p {
 .top-container {
     background-color: #E4F9F5;
     position: relative;
-    padding-top: 100px;
+    padding-top: auto;
     text-align: center;
 }
 
@@ -83,7 +86,7 @@ h3 {
     color: #22A39F;
 }
 
-/* Education */
+/* Projects */
 #projects .project {
     margin-bottom: 20px;
 }
@@ -92,9 +95,8 @@ h3 {
     margin-bottom: 20px;
 }
 
-#projects .project p > strong {
+#projects .project p>strong {
     display: block;
-    /* padding-top: 8px; */
     margin-bottom: 10px;
     text-align: left;
 }
@@ -108,7 +110,7 @@ h3 {
     color: #22A39F;
 }
 
-#projects .project-details > span {
+#projects .project-details>span {
     display: block;
     margin-bottom: 6px;
     text-align: left;
@@ -118,15 +120,8 @@ h3 {
     text-align: left;
 }
 
-#project .projects .project-details .seperator { display: none; }
-
-#projects .projects .project-details .seperator {
-    color: #BCBCBC;
- }
-
-
- /* Projects */
- #education .academic {
+/* Education */
+#education .academic {
     margin-bottom: 20px;
 }
 
@@ -134,9 +129,8 @@ h3 {
     margin-bottom: 20px;
 }
 
-#education .academics p > strong {
+#education .academics p>strong {
     display: block;
-    /* padding-top: 8px; */
     margin-bottom: 10px;
     text-align: left;
 }
@@ -150,7 +144,7 @@ h3 {
     color: #22A39F;
 }
 
-#education .academic-details > span {
+#education .academic-details>span {
     display: block;
     margin-bottom: 6px;
     text-align: left;
@@ -160,16 +154,13 @@ h3 {
     text-align: left;
 }
 
-#education .academics .academic-details .seperator { display: none; }
-
-#education .academics .academic-details .seperator {
+#education .academics .academic-details .separator {
     color: #BCBCBC;
- }
+}
 
 /* Experience */
-#experiences .experience p > strong {
+#experiences .experience p>strong {
     display: block;
-    /* padding-top: 8px; */
     margin-bottom: 10px;
     text-align: left;
 }
@@ -191,7 +182,7 @@ h3 {
     color: #22A39F;
 }
 
-#experiences .experience-details > span {
+#experiences .experience-details>span {
     display: block;
     margin-bottom: 6px;
     text-align: left;
@@ -201,11 +192,13 @@ h3 {
     text-align: left;
 }
 
-#experiences .experience .experience-details .seperator { display: none; }
+#experiences .experience .experience-details .seperator {
+    display: none;
+}
 
 #experiences .experience .experience-details .seperator {
     color: #BCBCBC;
- }
+}
 
 .container {
     max-width: 1280px;
@@ -260,6 +253,7 @@ hr {
 .hidden-phone {
     text-align: left;
 }
+
 .bottom-cloud {
     position: absolute;
     left: 300px;
@@ -267,9 +261,14 @@ hr {
 }
 
 @media (max-width: 767px) {
-    .container {padding: 60px 20px; min-width: 280px;}
-    .hidden-phone {display: none;}
-    
+    .container {
+        padding: 60px 20px;
+        min-width: 280px;
+    }
+
+    .hidden-phone {
+        display: none;
+    }
 }
 
 .background-gray {
@@ -323,12 +322,41 @@ hr {
     padding-bottom: 100px;
 }
 
-/* #projects a {
-    position: absolute;
-    opacity: 0;
-    height: 100%;
-    width: 100%;
-} */
 #projects a:hover {
     outline: 0px;
+}
+
+#menu .menuItem .menuItems {
+    float: right;
+    margin-right: 10px;
+    text-decoration: none;
+
+}
+
+#menu.container {
+    padding: 0px;
+    max-width: 1800px;
+}
+
+.nav {
+    justify-content: end;
+}
+
+.nav-container {
+    background-color: #E4F9F5;
+}
+
+.nav-link {
+    color: #22A39F;
+}
+
+nav .nav-link:hover,
+nav .nav-link:focus {
+    color: black !important;
+    text-transform: uppercase;
+    background-color: #22A39F;
+}
+
+i {
+    padding-right: 5px;
 }
