--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,10 @@ h3 {
     margin-bottom: 20px;
 }
 
+.color-container {
+    background-color: #E4F9F5;
+}
+
 #education .academics {
     margin-bottom: 20px;
 }
@@ -372,6 +376,29 @@ nav .nav-link:focus {
     background-color: #22A39F;
 }
 
-i {
+i.fw {
     padding-right: 5px;
+}
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    /* Place the button at the bottom of the page */
+    right: 30px;
+    /* Place the button 30px from the right */
+    z-index: 99;
+    /* Make sure it does not overlap */
+    border: none;
+    outline: none;
+    background-color: #434242;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#myBtn:hover {
+    background-color: #555;
 }
