--- a/css/styles.css
+++ b/css/styles.css
@@ -49,19 +49,17 @@ h3 {
     font-size: 28px;
 }
 
-h1,
 h4 {
     font-weight: 700;
     margin-bottom: 10px;
-}
-
-h4 {
     font-size: 16px;
 }
 
 h1 {
     font-size: 54px;
     color: #22A39F;
+    font-weight: 700;
+    margin-bottom: 10px;  
 }
 
 p {
@@ -78,6 +76,8 @@ p {
     position: relative;
     padding-top: auto;
     text-align: center;
+    max-width: 1280px;
+    padding: 10px 180px;
 }
 
 h2,
@@ -373,9 +373,7 @@ i.fw {
     display: none;
     position: fixed;
     bottom: 20px;
-    /* Place the button at the bottom of the page */
     right: 30px;
-    /* Place the button 30px from the right */
     z-index: 99;
     /* Make sure it does not overlap */
     border: none;
